@@ -5,5 +5,5 @@ WriteMakefile(
     'NAME'	   => 'Math::Fraction',
     'VERSION_FROM' => 'Fraction.pm', # finds $VERSION
     'PM'           => {'Fraction.pm' => '$(INST_LIBDIR)/Fraction.pm',
-                       'FractionDemo.pm' => '$(INST_LIBDIR)/FractionDemo.pm'}
+                       'FractionDemo.pm' => '$(INST_LIBDIR)/FractionDemo.pm' }
 );
